--- a/src/main/webapp/sections/layout/header/dependencies.xhtml
+++ b/src/main/webapp/sections/layout/header/dependencies.xhtml
@@ -32,7 +32,7 @@
 		<h:outputStylesheet library="css" name="plugins/custom-icon-set.css"/>
 		<h:outputStylesheet library="css" name="plugins/magic_space.css"/>
 		<h:outputStylesheet library="css" name="plugins/tiles_responsive.css"/>
-		
+		<h:outputStylesheet library="font-awesome-4.2.0/css" name="font-awesome.css"/>
 		<!-- END CSS TEMPLATE -->
 		
 		<h:outputStylesheet library="css" name="select2.css"/>
@@ -40,7 +40,8 @@
 		<h:outputStylesheet library="css" name="css.css"/>
 		<h:outputStylesheet library="css" name="application.css"/>
 		
-		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"/>
+		<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"/> -->
+		
 	</h:head>
 
 </ui:composition>
