--- a/src/main/webapp/sections/sales/layout/sale-wrapper.xhtml
+++ b/src/main/webapp/sections/sales/layout/sale-wrapper.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 	<!-- BEGIN HEADER -->
-		<ui:include src="../../../../layout/header/dependencies.xhtml"/>
+		<ui:include src="../../layout/header/dependencies.xhtml"/>
 	<!-- END HEADER -->
 	
 	<h:body class="breakpoint-1024 pace-done">
