--- a/src/main/webapp/sections/security/layout/profile-wrapper.xhtml
+++ b/src/main/webapp/sections/security/layout/profile-wrapper.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 	<!-- BEGIN HEADER -->
-		<ui:include src="../../../../layout/header/dependencies.xhtml"/>
+		<ui:include src="../../layout/header/dependencies.xhtml"/>
 	<!-- END HEADER -->
 	
 	<h:body class="inner-menu-always-close breakpoint-1024 pace-done" rendered="#{sessionController.isLogged()}">
@@ -157,7 +157,7 @@
 		<div class="page-container row-fluid">
 	  
 	  		<!-- BEGIN SIDEBAR -->
-				<ui:include src="../../../../layout/content/menu.xhtml"/>
+				<ui:include src="../../layout/content/menu.xhtml"/>
  			<!-- END SIDEBAR -->
   
 	 		<!-- BEGIN PAGE CONTAINER-->
