Add label para todos os cadastros de contatos. Add inputs de (estado/país) no cadastro de endereço.

--- a/src/main/webapp/sections/layout/header/dependencies.xhtml
+++ b/src/main/webapp/sections/layout/header/dependencies.xhtml
@@ -40,7 +40,7 @@
 		<h:outputStylesheet library="css" name="css.css"/>
 		<h:outputStylesheet library="css" name="application.css"/>
 		
-		<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"/> -->
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"/>
 		
 	</h:head>
 
