--- a/src/main/webapp/sections/layout/templates/partner/contact/list.xhtml
+++ b/src/main/webapp/sections/layout/templates/partner/contact/list.xhtml
@@ -11,7 +11,7 @@
 		<p:dataTable var="cts" scrollRows="5" scrollable="true" liveScroll="true" scrollHeight="200" 
 										 selection="#{contactController.bean}" selectionMode="single" 
 										 value="#{contactController.dataModel}" 
-										 emptyMessage="#{message.general_no_results}" styleClass="content-menuBody-datatable">
+										 emptyMessage="#{message.general_no_results}" styleClass="content-menuBody-datatable" style="min-height: 10%;">
 			
 			<ui:insert/>
 			
