--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -1,3 +1,12 @@
+.row .form-row{
+	margin: 6px 0 6px 0;
+}
+
+.hasDatepicker{
+	margin-bottom:0px !important;
+	max-width: 60% !important;
+}
+
 .ui-spinner-input{
 	width: 60px;
 }
@@ -540,7 +549,9 @@ tr { /* 	border-bottom: 1px solid #C33F77; */
 	vertical-align: middle;
 	background-color: #ffffff;
 	border: 1px solid #e5e9ec;
-	border-radius: 4px;
+	border-radius: 0 3px 3px 0;
+	-webkit-border-radius: 0 3px 3px 0;
+  	-moz-border-radius: 0 3px 3px 0;
 /* 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); */
 /* 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); */
 	-webkit-transition: border-color ease-in-out .15s, box-shadow
