--- a/src/main/webapp/resources/css/plugins/style.css
+++ b/src/main/webapp/resources/css/plugins/style.css
@@ -1153,7 +1153,7 @@ body.menu-non-fixed .page-sidebar {
   background-color: #e5e9ec;
   overflow: auto;
   position: relative;
-  height: 100%;
+  /**height: 100%;**/
 /**  min-height: 911px; **/
 }
 .page-content.condensed {
@@ -2798,9 +2798,9 @@ input[type="color"] {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
   border: 1px solid #e5e9ec;
   transition: background 0.2s linear 0s, box-shadow 0.2s linear 0s;
 }
@@ -3360,7 +3360,7 @@ form legend,
 .form-actions {
   background-color: #F2F4F6;
   border: 0px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   margin-top: 20px;
   padding: 19px 20px 20px;
 }
@@ -3992,7 +3992,7 @@ form legend,
 }
 .transparent .input-group-addon {
   background-color: #ffffff;
-  padding: 8px 1px 10px 9px;
+  padding: 8px 10px 10px 9px;
 }
 .transparent input {
   border-left: 0px;
@@ -4004,6 +4004,9 @@ form legend,
 .transparent .input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle) {
   border-right: 0px;
   border-left: 1px solid #e5e9ec;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
 }
 .transparent .input-group .form-control:last-child,
 .transparent .input-group-addon:last-child,
@@ -4297,9 +4300,9 @@ form legend,
   border-bottom: 0px;
 }
 .grid.simple .form-actions {
-  margin-right: -26px !important;
+  /*margin-right: -26px !important;
   margin-left: -26px !important;
-  margin-bottom: -26px !important;
+  margin-bottom: -26px !important;*/
 }
 .grid.simple.transparent .grid-body {
   background-color: transparent !important;
