--- a/src/main/webapp/sections/contact/model/contacts/layout/contact-wrapper.xhtml
+++ b/src/main/webapp/sections/contact/model/contacts/layout/contact-wrapper.xhtml
@@ -78,75 +78,38 @@
 						        		<div class="user-details">
 							            	<div class="username">  #{sessionController.loggedBean.firstName} <span class="bold">#{sessionController.loggedBean.lastName}</span> </div>
 								        </div>
-<!-- 						    			<div class="iconset top-down-arrow"></div> -->
 						          	</a>
-<!-- 						          	<div id="notification-list" style="display:none"> -->
-<!-- 						            <div style="width:300px"> -->
-<!-- 						            	<div class="notification-messages info"> -->
-<!-- 						                	<div class="user-profile"> <img src="resources/img/profiles/d.jpg" alt="" data-src="resources/img/profiles/d.jpg" data-src-retina="resources/img/profiles/d2x.jpg" width="35" height="35"> </img></div> -->
-<!-- 						                	<div class="message-wrapper"> -->
-<!-- 						                  		<div class="heading"> David Nester - Commented on your wall </div> -->
-<!-- 						                  		<div class="description"> Meeting postponed to tomorrow </div> -->
-<!-- 						                  		<div class="date pull-left"> A min ago </div> -->
-<!-- 						                	</div> -->
-<!-- 						                	<div class="clearfix"></div> -->
-<!-- 						              	</div> -->
-						              	
-<!-- 						             	<div class="notification-messages danger"> -->
-<!-- 						                	<div class="iconholder"> <i class="icon-warning-sign"></i> </div> -->
-<!-- 						                	<div class="message-wrapper"> -->
-<!-- 						                  		<div class="heading"> Server load limited </div> -->
-<!-- 						                  		<div class="description"> Database server has reached its daily capicity </div> -->
-<!-- 						                  		<div class="date pull-left"> 2 mins ago </div> -->
-<!-- 						                	</div> -->
-<!-- 						                	<div class="clearfix"></div> -->
-<!-- 						              	</div> -->
-						              	
-<!-- 						              	<div class="notification-messages success"> -->
-<!-- 						                	<div class="user-profile"> <img src="resources/img/profiles/h.jpg" alt="" data-src="resources/img/profiles/h.jpg" data-src-retina="resources/img/profiles/h2x.jpg" width="35" height="35"> </img></div> -->
-<!-- 						                	<div class="message-wrapper"> -->
-<!-- 						                  		<div class="heading"> You haveve got 150 messages </div> -->
-<!-- 						                  		<div class="description"> 150 newly unread messages in your inbox </div> -->
-<!-- 						                  		<div class="date pull-left"> An hour ago </div> -->
-<!-- 						                	</div> -->
-<!-- 						                	<div class="clearfix"></div> -->
-<!-- 						              	</div> -->
-<!-- 						            </div> -->
-<!-- 						       	</div> -->
-					        
-<!-- 					        	<div class="profile-pic"> <img src="resources/img/profiles/avatar.jpg" alt="" data-src="resources/img/profiles/avatar.jpg" data-src-retina="resources/img/profiles/avatar2x.jpg" width="35" height="35"> </img></div> -->
-					        	
-					        </div>
+					        	</div>
 					     
-						     <ul class="nav quick-section ">
-						     	<li class="quicklinks">
-						     		<a data-toggle="dropdown" class="dropdown-toggle  pull-right " href="#" id="user-options">
-						        		<div class="iconset top-settings-dark "></div>
-						            </a>
-						            <ul class="dropdown-menu  pull-right" role="menu" aria-labelledby="user-options">
-						            	<li><p:commandLink value="#{message.module_profile}" update="@all" actionListener="#{appMenu.load('PROFILE-WRAPPER')}"  style="border: 0 !important;"/></li>
-						            	<li class="divider"></li>
-						            	<li><h:commandLink value="#{message.general_logout}" styleClass="btn btn-sm" update="@all" action="#{sessionController.attemptLogout}"/></li>
-						            </ul>
-						       	</li>
-						        <li class="quicklinks"> <span class="h-seperate"></span></li>
-						        <li class="quicklinks">
-						        	<a id="chat-menu-toggle" href="#sidr" class="chat-menu-toggle">
-							        	<div class="iconset top-chat-dark "><span class="badge badge-important animated bounceIn" id="chat-message-count">1</span></div>
-						            </a>
-						            <div class="simple-chat-popup chat-menu-toggle hide animated fadeOut">
-						            	<div class="simple-chat-popup-arrow"></div>
-						              	<div class="simple-chat-popup-inner">
-							                <div style="width:100px">
-						                		<div class="semi-bold"></div>
-						                  		<div class="message"></div>
-						                	</div>
-						              	</div>
-						            </div>
-						        </li>
-							</ul>
-						</div>
-					<!-- END CHAT TOGGLER -->
+							     <ul class="nav quick-section ">
+							     	<li class="quicklinks">
+							     		<a data-toggle="dropdown" class="dropdown-toggle  pull-right " href="#" id="user-options">
+							        		<div class="iconset top-settings-dark "></div>
+							            </a>
+							            <ul class="dropdown-menu  pull-right" role="menu" aria-labelledby="user-options">
+							            	<li><p:commandLink value="#{message.module_profile}" update="@all" actionListener="#{appMenu.load('PROFILE-WRAPPER')}"  style="border: 0 !important;"/></li>
+							            	<li class="divider"></li>
+							            	<li><h:commandLink value="#{message.general_logout}" styleClass="btn btn-sm" update="@all" action="#{sessionController.attemptLogout}"/></li>
+							            </ul>
+							       	</li>
+							        <li class="quicklinks"> <span class="h-seperate"></span></li>
+							        <li class="quicklinks">
+							        	<a id="chat-menu-toggle" href="#sidr" class="chat-menu-toggle">
+								        	<div class="iconset top-chat-dark "><span class="badge badge-important animated bounceIn" id="chat-message-count">1</span></div>
+							            </a>
+							            <div class="simple-chat-popup chat-menu-toggle hide animated fadeOut">
+							            	<div class="simple-chat-popup-arrow"></div>
+							              	<div class="simple-chat-popup-inner">
+								                <div style="width:100px">
+							                		<div class="semi-bold"></div>
+							                  		<div class="message"></div>
+							                	</div>
+							              	</div>
+							            </div>
+							        </li>
+								</ul>
+							</div>
+						<!-- END CHAT TOGGLER -->
 					</div>
 				<!-- END TOP NAVIGATION MENU -->
 			</div>
@@ -163,15 +126,6 @@
 	 		<!-- BEGIN PAGE CONTAINER-->
 			<div class="page-content">
 			    
-				<!--
-				<div id="portlet-config" class="modal hide">
-			    	<div class="modal-header">
-			        	<button data-dismiss="modal" class="close" type="button"></button>
-			        	<h3>Widget Settings</h3>
-			      	</div>
-			      	<div class="modal-body"> Widget settings form goes here </div>
-			    </div>
-		    	-->
 		    	<div class="clearfix"></div>
 		    	
 		    		<!-- body -->
@@ -203,7 +157,7 @@
 							</div>
 							
 							<div class="col-lg-10">
-								<h:panelGroup layout="block" id="contact-menuBody" styleClass="col-lg-12 b-a b-grey" style="background: #FFF; max-height: auto; min-height: 70%; border-radius: 4px;">
+								<h:panelGroup layout="block" id="contact-menuBody" styleClass="col-lg-12 b-a b-grey" style="background: #FFF; max-height: auto !important; min-height: 65% !important; border-radius: 4px;">
 									
 									<h:panelGroup layout="block">
 										<h:panelGroup layout="block" rendered="#{contactMenuController.isLoaded('SIMPLES')}">
@@ -248,8 +202,6 @@
 		  
 		</div>
 		
-
-			<!-- footer <footer id="footer"><div class="text-center padder clearfix"></div></footer> / footer -->
 		</h:form>
 		
 			
